--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dependencies": {
         "express": "~4.14.0",
         "body-parser": "~1.15.2",
-        "serialport": "~5.0.0-beta1",
+        "serialport": "5.0.0-beta1",
         "compression": "^1.5.2",
         "cookie-parser": "^1.3.3",
         "ejs": "^2.3.1",
